# netpilot

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  rust.yml
configs/: example-bgp.json
crates/netpilot-auth/: Cargo.toml
crates/netpilot-auth/src/: lib.rs
crates/netpilot-auth/tests/: auth_vectors.rs
crates/netpilot-birdconf/: Cargo.toml
crates/netpilot-birdconf/src/: lexer.rs  lib.rs  parser.rs
crates/netpilot-channel/: Cargo.toml
crates/netpilot-channel/src/: channel.rs  lib.rs
crates/netpilot-config/: Cargo.toml
crates/netpilot-config/src/: diff.rs  lib.rs  schema.rs  store.rs  validation.rs
crates/netpilot-config/tests/: config_store.rs  scheduler.rs
crates/netpilot-filter/: Cargo.toml
crates/netpilot-filter/benches/: vm.rs
crates/netpilot-filter/src/: ast.rs  lib.rs  types.rs  value.rs  vm.rs
crates/netpilot-filter/tests/: attributes_test.rs  builtins_test.rs  control_flow.rs  function_tests.rs  types_roundtrip.rs
crates/netpilot-filter/tests/golden/: bird2_types.rs
crates/netpilot-grpc/: Cargo.toml  build.rs
crates/netpilot-grpc/proto/: gnmi.proto  netpilot.proto
crates/netpilot-grpc/src/: gnmi_svc.rs  lib.rs  netpilot_svc.rs  path_resolver.rs
crates/netpilot-io/: Cargo.toml
crates/netpilot-io/benches/: bgp_codec.rs
crates/netpilot-io/src/: bgp.rs  lib.rs  ospf.rs  transport.rs
crates/netpilot-io/tests/: bgp_loopback.rs
crates/netpilot-kernel/: Cargo.toml
crates/netpilot-kernel/src/: error.rs  interface.rs  lib.rs  route.rs
crates/netpilot-kernel/tests/: fib_integration.rs
crates/netpilot-proto-bfd/: Cargo.toml
crates/netpilot-proto-bfd/src/: actor.rs  lib.rs
crates/netpilot-proto-bgp/: Cargo.toml
crates/netpilot-proto-bgp/src/: actor.rs  lib.rs
crates/netpilot-proto-eigrp/: Cargo.toml
crates/netpilot-proto-eigrp/src/: actor.rs  config.rs  dual.rs  lib.rs  neighbor.rs  packet.rs  tlv.rs  transport.rs
crates/netpilot-proto-isis/: Cargo.toml
crates/netpilot-proto-isis/src/: actor.rs  adjacency.rs  config.rs  lib.rs  lsp.rs  packet.rs  spf.rs  timer.rs  tlv.rs  transport.rs
crates/netpilot-proto-ldp/: Cargo.toml
crates/netpilot-proto-ldp/src/: actor.rs  lib.rs
crates/netpilot-proto-ospf/: Cargo.toml
crates/netpilot-proto-ospf/src/: actor.rs  config.rs  lib.rs  lsdb.rs  neighbor.rs  spf.rs
crates/netpilot-proto-pim/: Cargo.toml
crates/netpilot-proto-pim/src/: actor.rs  lib.rs
crates/netpilot-proto-rip/: Cargo.toml
crates/netpilot-proto-rip/src/: actor.rs  lib.rs
crates/netpilot-proto-rpki/: Cargo.toml
crates/netpilot-proto-rpki/src/: actor.rs  lib.rs  rtr.rs
crates/netpilot-proto-rpki/tests/: rtr_mock.rs
crates/netpilot-protocol/: Cargo.toml
crates/netpilot-protocol/src/: actor.rs  event.rs  handle.rs  lib.rs  supervisor.rs
crates/netpilot-rib/: Cargo.toml
crates/netpilot-rib/benches/: best_path.rs
crates/netpilot-rib/src/: lib.rs  nexthop.rs  rib.rs  route.rs  selection.rs  table.rs
crates/netpilot-web/: index.html  package-lock.json  package.json
crates/netpilot-web/src/: App.jsx  styles.css
crates/netpilot-web/src/components/: ConfigPanel.jsx  Dashboard.jsx
crates/netpilotd/: Cargo.toml
crates/netpilotd/src/: api.rs  auth_mw.rs  cli.rs  lib.rs  main.rs  metrics.rs  mpls.rs  security.rs  sr.rs  state.rs  supervisor_resilience.rs
crates/netpilotd/tests/: api_config.rs  auth_mw.rs  cli_commands.rs  drop_privs.rs  metrics_endpoint.rs  sr.rs  supervisor_resilience.rs
crates/routeplane-config/: Cargo.toml
crates/routeplane-config/src/: diff.rs  lib.rs  schema.rs  store.rs  validation.rs
crates/routeplane-config/tests/: config_store.rs
crates/routeplane-filter/: Cargo.toml
crates/routeplane-filter/src/: ast.rs  attributes.rs  builtins.rs  lib.rs  nettype.rs  value.rs
crates/routeplane-filter/tests/: attributes_test.rs  builtins_test.rs  control_flow.rs  function_tests.rs  golden.rs  types_roundtrip.rs
crates/routeplane-filter/tests/golden/: bird2_types.rs
crates/routeplaned/: Cargo.toml
crates/routeplaned/src/: api.rs  lib.rs  main.rs  state.rs
crates/routeplaned/tests/: api_config.rs
docs/: AUDIT.md  CONFIGURATION.md  INTRODUCTION.md
docs/superpowers/plans/: 2026-06-12-netpilot-filter-language.md  2026-06-12-netpilot-gap-closure-roadmap.md  2026-06-12-netpilot-milestone-1.md  2026-06-12-riftcore-milestone-1.md  2026-06-12-routeplane-filter-language.md  2026-06-12-routeplane-gap-closure-roadmap.md  2026-06-12-routeplane-milestone-1.md  2026-06-13-netpilot-grpc-management.md  2026-06-13-netpilot-isis-protocol.md  2026-06-13-netpilot-mpls-foundation.md  2026-06-13-netpilot-sr-mpls-srv6.md
docs/superpowers/specs/: 2026-06-12-netpilot-routing-platform-design.md  2026-06-12-routeplane-routing-platform-design.md  2026-06-12-rust-routing-platform-design.md  2026-06-13-netpilot-birdconf-design.md  2026-06-13-netpilot-eigrp-protocol-design.md  2026-06-13-netpilot-grpc-management-design.md  2026-06-13-netpilot-isis-protocol-design.md  2026-06-13-netpilot-mpls-foundation-design.md  2026-06-13-netpilot-protocol-kernel-design.md  2026-06-13-netpilot-rib-channel-design.md  2026-06-13-netpilot-sr-mpls-srv6-design.md  2026-06-13-netpilot-webui-design.md
scripts/: smoke-test.sh  start.sh
tests/integration/: Cargo.toml  test_full_flow.rs
