[workspace]
members = [
    "crates/netpilot-config",
    "crates/netpilot-filter",
    "crates/netpilot-grpc",
    "crates/netpilot-kernel",
    "crates/netpilot-protocol",
    "crates/netpilot-proto-isis",
    "crates/netpilotd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
