[workspace]
members = [
    "tests/integration",
    "crates/netpilot-auth",
    "crates/netpilot-channel",
    "crates/netpilot-config",
    "crates/netpilot-filter",
    "crates/netpilot-grpc",
    "crates/netpilot-kernel",
    "crates/netpilot-rib",
    "crates/netpilot-protocol",
    "crates/netpilot-birdconf",
    "crates/netpilot-proto-bfd",
    "crates/netpilot-proto-eigrp",
    "crates/netpilot-proto-isis",
    "crates/netpilot-proto-ospf",
    "crates/netpilot-proto-bgp",
    "crates/netpilot-proto-ldp",
    "crates/netpilot-proto-pim",
    "crates/netpilot-proto-rip",
    "crates/netpilot-proto-rpki",
    "crates/netpilot-io",
    "crates/netpilotd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
capctl = "0.2"
nix = { version = "0.29", features = ["fs", "net", "process", "user", "sched", "signal"] }
subtle = "2"
blake2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
