[package]
name = "netpilot-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-filter = { path = "../netpilot-filter" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
