[package]
name = "netpilot-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-config = { path = "../netpilot-config" }
prost = "0.13"
prost-types = "0.13"
serde_json.workspace = true
tokio.workspace = true
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
