[package]
name = "netpilot-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.5", features = ["all"] }

[dependencies]
netpilot-config = { path = "../netpilot-config" }
async-trait = "0.1"
bytes = "1"
thiserror.workspace = true
tokio.workspace = true
time.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bgp_codec"
harness = false