[package]
name = "netpilot-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.15"
lru = "0.16"

[dependencies]
futures = "0.3"
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix.workspace = true
