[package]
name = "netpilot-proto-eigrp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-config = { path = "../netpilot-config" }
serde.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tokio.workspace = true
time.workspace = true
