[package]
name = "netpilot-proto-isis"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-config = { path = "../netpilot-config" }
netpilot-kernel = { path = "../netpilot-kernel" }
serde.workspace = true
async-trait = "0.1"
socket2 = "0.5"
thiserror.workspace = true
tokio.workspace = true
time.workspace = true
