[package]
name = "netpilot-proto-ldp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-config = { path = "../netpilot-config" }
netpilot-rib = { path = "../netpilot-rib" }
async-trait = "0.1"
tokio.workspace = true
