[package]
name = "netpilot-proto-rpki"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-config = { path = "../netpilot-config" }
async-trait = "0.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
