[package]
name = "netpilotd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
netpilot-channel = { path = "../netpilot-channel" }
netpilot-config = { path = "../netpilot-config" }
netpilot-grpc = { path = "../netpilot-grpc" }
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-rib = { path = "../netpilot-rib" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tonic = "0.12"

[dev-dependencies]
tower.workspace = true
