[package]
name = "netpilotd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
netpilot-channel = { path = "../netpilot-channel" }
netpilot-config = { path = "../netpilot-config" }
netpilot-grpc = { path = "../netpilot-grpc" }
netpilot-kernel = { path = "../netpilot-kernel" }
netpilot-proto-bgp = { path = "../netpilot-proto-bgp" }
netpilot-proto-eigrp = { path = "../netpilot-proto-eigrp" }
netpilot-proto-isis = { path = "../netpilot-proto-isis" }
netpilot-proto-ospf = { path = "../netpilot-proto-ospf" }
netpilot-protocol = { path = "../netpilot-protocol" }
netpilot-rib = { path = "../netpilot-rib" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http.workspace = true

[dev-dependencies]
tower.workspace = true
